--- a/WBooks/source/controllers/Details-Book/Comments/CommentsView.xib
+++ b/WBooks/source/controllers/Details-Book/Comments/CommentsView.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CommentsView" customModule="WBooks" customModuleProvider="target">
             <connections>
-                <outlet property="TableViewComments" destination="6ly-CN-Pdw" id="mjN-nW-NeC"/>
+                <outlet property="commentsTable" destination="6ly-CN-Pdw" id="SPp-zZ-J4s"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -18,22 +18,14 @@
             <rect key="frame" x="0.0" y="0.0" width="400" height="406"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6ly-CN-Pdw">
-                    <rect key="frame" x="0.0" y="44" width="400" height="362"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6ly-CN-Pdw">
+                    <rect key="frame" x="0.0" y="0.0" width="400" height="406"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="400" id="8JN-qr-FR5"/>
-                    </constraints>
                 </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="3ak-3V-sBX"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-            <constraints>
-                <constraint firstItem="3ak-3V-sBX" firstAttribute="bottom" secondItem="6ly-CN-Pdw" secondAttribute="bottom" id="B1j-XO-ywD"/>
-                <constraint firstItem="6ly-CN-Pdw" firstAttribute="leading" secondItem="3ak-3V-sBX" secondAttribute="leading" id="XIU-Vm-eSp"/>
-                <constraint firstItem="6ly-CN-Pdw" firstAttribute="top" secondItem="3ak-3V-sBX" secondAttribute="top" id="agY-oV-GCx"/>
-                <constraint firstItem="3ak-3V-sBX" firstAttribute="trailing" secondItem="6ly-CN-Pdw" secondAttribute="trailing" id="tXV-D3-xqn"/>
-            </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="181.15942028985509" y="-107.14285714285714"/>
         </view>
