--- a/WBooks/source/controllers/Details-Book/DetailsBookView.xib
+++ b/WBooks/source/controllers/Details-Book/DetailsBookView.xib
@@ -20,60 +20,57 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="429" height="329"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b4K-rA-hes">
-                    <rect key="frame" x="20" y="12" width="389" height="270"/>
+                    <rect key="frame" x="20" y="20" width="374" height="346"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="35" translatesAutoresizingMaskIntoConstraints="NO" id="94w-U2-Knq">
-                            <rect key="frame" x="0.0" y="0.0" width="389" height="270"/>
+                            <rect key="frame" x="0.0" y="0.0" width="374" height="312"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="XGP-9i-nDd">
-                                    <rect key="frame" x="0.0" y="0.0" width="389" height="139"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="374" height="168"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Wdi-da-U72">
-                                            <rect key="frame" x="16" y="8" width="80" height="123"/>
+                                            <rect key="frame" x="16" y="32" width="80" height="128"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="80" id="6dc-yO-q55"/>
-                                                <constraint firstAttribute="height" constant="123" id="DIQ-aN-aZO"/>
+                                                <constraint firstAttribute="width" constant="80" id="SvG-1c-MTz"/>
+                                                <constraint firstAttribute="height" constant="128" id="mfd-Lh-ejA"/>
                                             </constraints>
                                         </imageView>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="yEO-4h-fwv">
-                                            <rect key="frame" x="104" y="8" width="269" height="123"/>
+                                            <rect key="frame" x="104" y="32" width="254" height="128"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ehs-ry-P3E">
-                                                    <rect key="frame" x="16" y="32" width="36.5" height="18"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="18" id="6eA-y2-TIQ"/>
-                                                    </constraints>
+                                                    <rect key="frame" x="16" y="8" width="36.5" height="23"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="Pdf-TT-XKV">
-                                                    <rect key="frame" x="16" y="58" width="37.5" height="57"/>
+                                                    <rect key="frame" x="16" y="39" width="37.5" height="81"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ujy-Ia-9aj">
-                                                            <rect key="frame" x="0.0" y="0.0" width="37.5" height="12"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="37.5" height="18"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bep-GA-T47">
-                                                            <rect key="frame" x="0.0" y="15" width="37.5" height="12"/>
+                                                            <rect key="frame" x="0.0" y="21" width="37.5" height="18"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ojp-Q2-NTY">
-                                                            <rect key="frame" x="0.0" y="30" width="37.5" height="12"/>
+                                                            <rect key="frame" x="0.0" y="42" width="37.5" height="18"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gad-Sn-ddw">
-                                                            <rect key="frame" x="0.0" y="45" width="37.5" height="12"/>
+                                                            <rect key="frame" x="0.0" y="63" width="37.5" height="18"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -84,18 +81,13 @@
                                             <edgeInsets key="layoutMargins" top="8" left="16" bottom="8" right="16"/>
                                         </stackView>
                                     </subviews>
-                                    <constraints>
-                                        <constraint firstItem="Wdi-da-U72" firstAttribute="leading" secondItem="XGP-9i-nDd" secondAttribute="leading" constant="16" id="E6w-Zq-N7j"/>
-                                        <constraint firstItem="Wdi-da-U72" firstAttribute="top" secondItem="XGP-9i-nDd" secondAttribute="top" constant="8" id="Kmp-qx-XPf"/>
-                                        <constraint firstAttribute="bottom" secondItem="Wdi-da-U72" secondAttribute="bottom" constant="8" id="cJ4-tp-D0D"/>
-                                    </constraints>
                                     <edgeInsets key="layoutMargins" top="8" left="16" bottom="8" right="16"/>
                                 </stackView>
-                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="rWp-hX-gTg">
-                                    <rect key="frame" x="0.0" y="174" width="389" height="96"/>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="rWp-hX-gTg">
+                                    <rect key="frame" x="0.0" y="203" width="374" height="109"/>
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iSy-0p-stS">
-                                            <rect key="frame" x="20" y="8" width="349" height="30"/>
+                                            <rect key="frame" x="20" y="8" width="334" height="44"/>
                                             <state key="normal" title="ADD TO WISHLIST">
                                                 <color key="titleColor" red="0.0" green="0.67843137254901964" blue="0.93333333333333335" alpha="1" colorSpace="calibratedRGB"/>
                                             </state>
@@ -112,7 +104,7 @@
                                             </userDefinedRuntimeAttributes>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mnA-x5-IAt">
-                                            <rect key="frame" x="20" y="58" width="349" height="30"/>
+                                            <rect key="frame" x="20" y="57" width="334" height="44"/>
                                             <state key="normal" title="RENT" backgroundImage="img_main button.png">
                                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </state>
@@ -127,24 +119,17 @@
                                 </stackView>
                             </subviews>
                             <constraints>
-                                <constraint firstItem="XGP-9i-nDd" firstAttribute="trailing" secondItem="rWp-hX-gTg" secondAttribute="trailing" id="86e-CW-NBa"/>
-                                <constraint firstItem="XGP-9i-nDd" firstAttribute="leading" secondItem="94w-U2-Knq" secondAttribute="leading" id="RF0-Tx-G4b"/>
-                                <constraint firstItem="rWp-hX-gTg" firstAttribute="leading" secondItem="94w-U2-Knq" secondAttribute="leading" id="Tdb-ld-jwW"/>
-                                <constraint firstItem="XGP-9i-nDd" firstAttribute="top" secondItem="94w-U2-Knq" secondAttribute="top" id="bR4-Rs-M5j"/>
-                                <constraint firstAttribute="trailing" secondItem="XGP-9i-nDd" secondAttribute="trailing" id="bt3-jf-1yy"/>
-                                <constraint firstAttribute="bottom" secondItem="rWp-hX-gTg" secondAttribute="bottom" id="eUP-eT-WjA"/>
-                                <constraint firstAttribute="trailing" secondItem="XGP-9i-nDd" secondAttribute="trailing" id="mQB-9F-HBR"/>
-                                <constraint firstAttribute="trailing" secondItem="rWp-hX-gTg" secondAttribute="trailing" id="nkz-VC-rbt"/>
+                                <constraint firstAttribute="trailing" secondItem="XGP-9i-nDd" secondAttribute="trailing" id="aQ7-7V-UqW"/>
+                                <constraint firstItem="XGP-9i-nDd" firstAttribute="trailing" secondItem="rWp-hX-gTg" secondAttribute="trailing" id="dgq-Z4-edc"/>
                             </constraints>
                         </stackView>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="94w-U2-Knq" secondAttribute="trailing" id="QQQ-Dd-H1v"/>
-                        <constraint firstAttribute="height" constant="270" id="SQe-zw-Nmk"/>
-                        <constraint firstAttribute="bottom" secondItem="94w-U2-Knq" secondAttribute="bottom" id="lUc-B4-5B0"/>
-                        <constraint firstItem="94w-U2-Knq" firstAttribute="top" secondItem="b4K-rA-hes" secondAttribute="top" id="o2q-WO-64b"/>
-                        <constraint firstItem="94w-U2-Knq" firstAttribute="leading" secondItem="b4K-rA-hes" secondAttribute="leading" id="vK7-Gj-fjw"/>
+                        <constraint firstItem="94w-U2-Knq" firstAttribute="leading" secondItem="b4K-rA-hes" secondAttribute="leading" id="2Hb-NU-2Fa"/>
+                        <constraint firstAttribute="trailing" secondItem="94w-U2-Knq" secondAttribute="trailing" id="Rfa-9u-kjA"/>
+                        <constraint firstAttribute="bottom" secondItem="94w-U2-Knq" secondAttribute="bottom" constant="34" id="Ya8-eT-tu6"/>
+                        <constraint firstItem="94w-U2-Knq" firstAttribute="top" secondItem="b4K-rA-hes" secondAttribute="top" id="vYL-as-TO4"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -152,17 +137,24 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kre-Ad-Gxe">
+                    <rect key="frame" x="20" y="389" width="374" height="481"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" red="0.91764705882352937" green="0.96470588235294119" blue="0.98039215686274506" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="b4K-rA-hes" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="5Qu-Vi-rf2"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="b4K-rA-hes" secondAttribute="bottom" constant="12" id="Am0-Qo-bKb"/>
-                <constraint firstAttribute="trailing" secondItem="b4K-rA-hes" secondAttribute="trailing" constant="20" id="Ezq-VW-EDS"/>
-                <constraint firstItem="b4K-rA-hes" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="12" id="Wge-ws-GcY"/>
+                <constraint firstItem="b4K-rA-hes" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leadingMargin" id="35m-hK-jBS"/>
+                <constraint firstItem="b4K-rA-hes" firstAttribute="leading" secondItem="Kre-Ad-Gxe" secondAttribute="leading" id="4bS-A3-lKt"/>
+                <constraint firstItem="Kre-Ad-Gxe" firstAttribute="top" secondItem="b4K-rA-hes" secondAttribute="bottom" constant="23" id="4gz-4q-v5I"/>
+                <constraint firstItem="b4K-rA-hes" firstAttribute="trailing" secondItem="Kre-Ad-Gxe" secondAttribute="trailing" id="J5S-3i-zrH"/>
+                <constraint firstAttribute="bottom" secondItem="Kre-Ad-Gxe" secondAttribute="bottom" constant="26" id="Pdi-N6-kLD"/>
+                <constraint firstItem="b4K-rA-hes" firstAttribute="trailing" secondItem="i5M-Pr-FkT" secondAttribute="trailingMargin" id="X9t-ZW-IzC"/>
+                <constraint firstItem="b4K-rA-hes" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="u2k-jl-QpD"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="116.66666666666667" y="45.200892857142854"/>
+            <point key="canvasLocation" x="115.94202898550725" y="44.866071428571423"/>
         </view>
     </objects>
     <resources>
